fix for IE not showing a scrollbar.
git-svn-id: https://kt-dms.svn.sourceforge.net/svnroot/kt-dms/trunk@4279 c91229c3-7414-0410-bfa2-8a42b809f60b

--- a/resources/css/kt-framing.css
+++ b/resources/css/kt-framing.css
@@ -220,7 +220,7 @@ a.main_nav_item {
 
 #content
 {
-    position: absolute;
+    position: relative;
     left: 15em;
     top: 0;
     right: 0;
